--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  h1, h2, h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700; /* Example for bold text */
+  }
+  
+  p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400; /* Example for regular text */
+  }
+  
